--- a/plugin.xml
+++ b/plugin.xml
@@ -5,55 +5,84 @@
    <extension
          point="org.eclipse.ui.commands">
       <category
-            name="Sample Category"
+            name="SmartCNP"
             id="SmartCNP.commands.category">
       </category>
       <command
-            name="Sample Command"
+            name="SmartCopy"
             categoryId="SmartCNP.commands.category"
-            id="SmartCNP.commands.sampleCommand">
+            id="SmartCNP.commands.smartCopyCommand">
+      </command>
+      <command
+            categoryId="SmartCNP.commands.category"
+            id="SmartCNP.commands.smartPasteCommand"
+            name="SmartPaste">
       </command>
    </extension>
    <extension
          point="org.eclipse.ui.handlers">
       <handler
-            commandId="SmartCNP.commands.sampleCommand"
+            commandId="SmartCNP.commands.smartCopyCommand"
             class="smartcnp.handlers.CopyHandler">
+      </handler>
+      <handler
+            class="smartcnp.handlers.PasteHandler"
+            commandId="SmartCNP.commands.smartPasteCommand">
       </handler>
    </extension>
    <extension
          point="org.eclipse.ui.bindings">
       <key
-            commandId="SmartCNP.commands.sampleCommand"
+            commandId="SmartCNP.commands.smartCopyCommand"
             contextId="org.eclipse.ui.contexts.window"
-            sequence="M1+6"
+            sequence="M1+7"
             schemeId="org.eclipse.ui.defaultAcceleratorConfiguration">
       </key>
-   </extension>
+    </extension> 
+     <extension
+         point="org.eclipse.ui.bindings">
+      <key
+            commandId="SmartCNP.commands.smartPasteCommand"
+            contextId="org.eclipse.ui.contexts.window"
+            schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
+            sequence="M1+8">
+      </key>
+      </extension>
    <extension
          point="org.eclipse.ui.menus">
       <menuContribution
             locationURI="menu:org.eclipse.ui.main.menu?after=additions">
          <menu
-               label="Sample Menu"
+               label="SmartyCNP"
                mnemonic="M"
-               id="SmartCNP.menus.sampleMenu">
+               id="SmartCNP.menus.SmartCNPMenu">
             <command
-                  commandId="SmartCNP.commands.sampleCommand"
+                  commandId="SmartCNP.commands.smartCopyCommand"
                   mnemonic="S"
-                  id="SmartCNP.menus.sampleCommand">
+                  id="SmartCNP.menus.smartCopyCommand">
+            </command>
+            <command
+                  commandId="SmartCNP.commands.smartPasteCommand"
+                  id="SmartCNP.menus.smartPasteCommand"
+                  mnemonic="S">
             </command>
          </menu>
       </menuContribution>
       <menuContribution
             locationURI="toolbar:org.eclipse.ui.main.toolbar?after=additions">
          <toolbar
-               id="SmartCNP.toolbars.sampleToolbar">
+               id="SmartCNP.menus.smartPasteToolbar">
             <command
-                  commandId="SmartCNP.commands.sampleCommand"
-                  icon="icons/sample.gif"
-                  tooltip="Say hello world"
-                  id="SmartCNP.toolbars.sampleCommand">
+                  commandId="SmartCNP.commands.smartCopyCommand"
+                  icon="icons/dp.png"
+                  tooltip="smart copy"
+                  id="SmartCNP.toolbars.smartCopyCommand">
+            </command>
+            <command
+                  commandId="SmartCNP.commands.smartPasteCommand"
+                  icon="icons/dp.png"
+                  id="SmartCNP.toolbars.smartPasteCommand"
+                  tooltip="smart paste">
             </command>
          </toolbar>
       </menuContribution>
