--- a/build.properties
+++ b/build.properties
@@ -3,4 +3,8 @@ output.. = bin/
 bin.includes = plugin.xml,\
                META-INF/,\
                .,\
-               icons/
+               icons/,\
+               template/,\
+               freemarker-2.3.13.jar
+jars.compile.order = .
+src.includes = freemarker-2.3.13.jar
