--- a/build.properties
+++ b/build.properties
@@ -4,7 +4,6 @@ bin.includes = plugin.xml,\
                META-INF/,\
                .,\
                icons/,\
-               template/,\
-               freemarker-2.3.13.jar
+               template/
 jars.compile.order = .
 src.includes = freemarker-2.3.13.jar
